--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,6 @@
         <input type="number" name = "number">
         <input type="submit" value = "guess">
     </form>
-    sesh:  <%= panther %>
+    <!-- sesh:  <%= panther %> -->
 </body>
 </html>
