--- a/views/low.ejs
+++ b/views/low.ejs
@@ -12,7 +12,7 @@
         <input type="number" name = "number">
         <input type="submit" value = "guess">
     </form>
-    sesh:  <%= panther %>
+    <!-- sesh:  <%= panther %> -->
 
     <h1>LOW PAGE!!!</h1>
 </body>
