--- a/views/win.ejs
+++ b/views/win.ejs
@@ -12,8 +12,8 @@
         <input type="number" name = "number">
         <input type="submit" value = "guess">
     </form>
-    sesh:  <%= panther %>
+    <!-- sesh:  <%= panther %> -->
 </body>
 <h1>Winner, Winner, Chicken Dinner</h1>
-<a href="/">Play Again?</a>
+<a href="/reset">Play Again?</a>
 </html>
